Fixing nav arrow color and alignment

--- a/css/main.css
+++ b/css/main.css
@@ -9609,34 +9609,33 @@ img[src*=".svg"] .main-logo-container .ie9 {
 }
 /* line 55, ../sass/partials/_nav-main.scss */
 .navbar-list-sub:before {
-  color: #37BC98;
-  content: '▲';
-  width: 14px;
-  height: 8px;
+  content: '';
   position: absolute;
   left: 50%;
   margin-left: -7px;
-  font-size: 14px;
-  font-family: arial;
-  line-height: 1;
-  -webkit-transform: scale(1.75, 1);
-  -ms-transform: scale(1.75, 1);
-  -o-transform: scale(1.75, 1);
-  transform: scale(1.75, 1);
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 8px 9px 8px;
+  border-color: transparent transparent #37BC98 transparent;
 }
-/* line 70, ../sass/partials/_nav-main.scss */
+/* line 67, ../sass/partials/_nav-main.scss */
+.navbar-list-sub.alt-arrow-emphasize:before {
+  border-color: transparent transparent #2E9D7F transparent;
+}
+/* line 74, ../sass/partials/_nav-main.scss */
 .navbar-list-sub .link-sub {
   display: block;
   padding: 18px;
   color: #FFF;
   background-color: #37BC98;
 }
-/* line 75, ../sass/partials/_nav-main.scss */
+/* line 79, ../sass/partials/_nav-main.scss */
 .navbar-list-sub .link-sub:hover {
   background-color: #2E9D7F;
   text-decoration: none;
 }
-/* line 79, ../sass/partials/_nav-main.scss */
+/* line 83, ../sass/partials/_nav-main.scss */
 .navbar-list-sub .link-sub.selected {
   background-color: #2E9D7F;
 }
