--- a/sass/partials/_nav-main.scss
+++ b/sass/partials/_nav-main.scss
@@ -53,18 +53,22 @@
     
     // Arrow op top
     &:before {
-        color: $link-color;
-        content: '▲';
-        width: 14px;
-        height: 8px;
+        content: '';
         position: absolute;
         left: 50%;
         margin-left: -7px;
-        font-size: 14px;
-        font-family: arial;
-        line-height: 1;
-        @include scale(1.75, 1);
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 0 8px 9px 8px;
+        border-color: transparent transparent $link-color transparent;
+
     }
+    &.alt-arrow-emphasize:before {
+        border-color: transparent transparent $link-color-emphasize transparent;
+    }
+
+
 
     // Sub nav links
     .link-sub {
